Fixing so thank-you page not visible unless pending status

--- a/Ember/app/styles/client-booking.scss
+++ b/Ember/app/styles/client-booking.scss
@@ -261,6 +261,8 @@ $breakpoint-alpha: 768px;
 
 .booking-complete-style {
 
+  display: none;
+
   .top-thank-you-page {
     padding-top: 50px;
     background-color: #292b2c;
